update planets length dynamically

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,10 @@
     <meta charset='utf-8' />
     <meta name='viewport' content='width=device-width, initial-scale=1' />
     <link rel='manifest' href='%PUBLIC_URL%/manifest.json' />
-    <title>Star Wars Planets</title>
+    <title>Star Wars Planets Randomizer</title>
   </head>
   <body>
     <noscript>Habilite o Javascript.</noscript>
     <div id='root'></div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js" integrity="sha256-S1J4GVHHDMiirir9qsXWc8ZWw74PHHafpsHp5PXtjTs=" crossorigin="anonymous"></script>
   </body>
 </html>
